Bug 377084 - WebEnginePart does not render kio output (kio_help, kio_man, ...)
Summary: WebEnginePart does not render kio output (kio_help, kio_man, ...)
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: webenginepart (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stefano Crocco
URL:
Keywords:
: 386247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-03-01 22:55 UTC by Luigi Toscano
Modified: 2018-07-16 09:16 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luigi Toscano 2017-03-01 22:55:38 UTC
The WebEnginePart (default rendered) does not render the output from kioslaves like kio_help, kio_man, kio_gopher, and probably all of the others which renders HTML. The error printed is:

---------------------------
This site can’t be reached

The webpage at <url:/foo/bar> might be temporarily down or it may have moved permanently to a new web address.
ERR_UNKNOWN_URL_SCHEME
--------------------------

This is not a Konqueror issue, as the "KHTML" view mode renders correctly those contents.
This issue is visible in from Applications 16.12 up to the last git master.
Comment 1 Alain Dumont 2017-05-13 13:52:08 UTC
(In reply to Luigi Toscano from comment #0)
> The WebEnginePart (default rendered) does not render the output from
> kioslaves like kio_help, kio_man, kio_gopher, and probably all of the others
> which renders HTML. The error printed is:
> 
> ---------------------------
> This site can’t be reached
> 
> The webpage at <url:/foo/bar> might be temporarily down or it may have moved
> permanently to a new web address.
> ERR_UNKNOWN_URL_SCHEME
> --------------------------
> 
> This is not a Konqueror issue, as the "KHTML" view mode renders correctly
> those contents.
> This issue is visible in from Applications 16.12 up to the last git master.

Same bug here with Konqueror-16.2.3 Frameworks 5.33, QT-5.8.0 (build with qtwebengine).
Konqueror doesn't open man:/  info:/ ... when using "WebEngine".
It works with KHTML.
Comment 2 David Faure 2017-07-14 14:48:08 UTC
Git commit 8a5ef4d042f45668cf0364f341f6abca007a85c8 by David Faure.
Committed on 14/07/2017 at 14:41.
Pushed by dfaure into branch 'webengine_streaming'.

Add support again for man:, info: and other slaves which output HTML.

using the newly added support for streaming data into WebEnginePart.

M  +10   -0    src/konqview.cpp
M  +8    -3    webenginepart/src/webenginepage.cpp
M  +5    -2    webenginepart/src/webenginepart.cpp

https://commits.kde.org/konqueror/8a5ef4d042f45668cf0364f341f6abca007a85c8
Comment 3 David Faure 2017-07-14 14:50:14 UTC
I have a fix, but the link to file:/// stylesheets fail to load due to security checks in WebEngine.

I submitted https://bugreports.qt.io/browse/QTBUG-61937 to possibly fix that, the alternative would be to embed the stylesheet into the HTML (and use data URLs for icons).

I pushed my current work into a branch (since it redesigns the support for the about: page too, which now suffers from the same security issue).

See branch webengine_streaming in konqueror.git.
Comment 4 Wolfgang Bauer 2018-02-07 13:09:28 UTC
*** Bug 386247 has been marked as a duplicate of this bug. ***
Comment 5 Stefano Crocco 2018-07-16 09:16:28 UTC
Fixed in commit d0842c88fc5a8410c88dbd6ac0def09adc7c1fb6