Add support again for man:, info: and other slaves which output HTML.

using the newly added support for streaming data into WebEnginePart.

BUG: 377084